// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HTMLReportBodySummary /> 1`] = `
<body>
  <div
    className="ui grid container"
  >
    <div
      className="row"
    >
      <h2>
        Flow Coverage Report
      </h2>
    </div>
    <div
      className="row"
    >
      <h4
        className="ui header"
      >
        Summary
      </h4>
      <table
        className="ui small celled table"
      >
        <thead>
          <tr>
            <th>
              Percent
            </th>
            <th>
              Total
            </th>
            <th>
              Covered
            </th>
            <th>
              Uncovered
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="positive"
          >
            <td>
              50
               %
            </td>
            <td>
              8
            </td>
            <td>
              4
            </td>
            <td>
              4
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="row"
    >
      <h4
        className="ui header"
      >
        Files
      </h4>
      <table
        className="ui small celled table sortable"
        id="files"
      >
        <thead>
          <tr>
            <th
              className="sorted ascending"
            >
              Filename
            </th>
            <th>
              Annotation
            </th>
            <th>
              Percent
            </th>
            <th>
              Total
            </th>
            <th>
              Covered
            </th>
            <th>
              Uncovered
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="positive"
          >
            <td
              className="selectable"
            >
              <a
                href="sourcefiles/src/a.js.html"
              >
                src/a.js
              </a>
            </td>
            <td>
               @
              flow
               
            </td>
            <td
              className=""
            >
              <span>
                50
                 %
              </span>
            </td>
            <td>
               
              2
               
            </td>
            <td>
               
              1
               
            </td>
            <td>
               
              1
               
            </td>
          </tr>
          <tr
            className="positive"
          >
            <td
              className="selectable"
            >
              <a
                href="sourcefiles/src/b.js.html"
              >
                src/b.js
              </a>
            </td>
            <td>
               @
              flow
               
            </td>
            <td
              className=""
            >
              <span>
                50
                 %
              </span>
            </td>
            <td>
               
              2
               
            </td>
            <td>
               
              1
               
            </td>
            <td>
               
              1
               
            </td>
          </tr>
          <tr
            className="positive"
          >
            <td
              className="selectable"
            >
              <a
                href="sourcefiles/src/d1/c.js.html"
              >
                src/d1/c.js
              </a>
            </td>
            <td>
               @
              flow
               
            </td>
            <td
              className=""
            >
              <span>
                50
                 %
              </span>
            </td>
            <td>
               
              2
               
            </td>
            <td>
               
              1
               
            </td>
            <td>
               
              1
               
            </td>
          </tr>
          <tr
            className="positive"
          >
            <td
              className="selectable"
            >
              <a
                href="sourcefiles/src/d1/d.js.html"
              >
                src/d1/d.js
              </a>
            </td>
            <td>
               @
              flow
               
            </td>
            <td
              className=""
            >
              <span>
                50
                 %
              </span>
            </td>
            <td>
               
              2
               
            </td>
            <td>
               
              1
               
            </td>
            <td>
               
              1
               
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="row centered"
    >
      <footer>
        Flow Coverage Report generated by
        <a
          href="https://flowtype.org"
        >
           flow 
        </a>
        and
        <a
          href="https://github.com/rpl/flow-coverage-report"
        >
           flow-coverage-report 
        </a>
        at 
      </footer>
    </div>
  </div>
</body>
`;

exports[`<HTMLReportBodySummary /> 2`] = `
<body>
  <div
    className="ui grid container"
  >
    <div
      className="row"
    >
      <h2>
        Flow Coverage Report
      </h2>
    </div>
    <div
      className="row"
    >
      <h4
        className="ui header"
      >
        Summary
      </h4>
      <table
        className="ui small celled table"
      >
        <thead>
          <tr>
            <th>
              Percent
            </th>
            <th>
              Total
            </th>
            <th>
              Covered
            </th>
            <th>
              Uncovered
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="negative"
          >
            <td>
              50
               %
            </td>
            <td>
              8
            </td>
            <td>
              4
            </td>
            <td>
              4
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="row"
    >
      <h4
        className="ui header"
      >
        Files
      </h4>
      <table
        className="ui small celled table sortable"
        id="files"
      >
        <thead>
          <tr>
            <th
              className="sorted ascending"
            >
              Filename
            </th>
            <th>
              Annotation
            </th>
            <th>
              Percent
            </th>
            <th>
              Total
            </th>
            <th>
              Covered
            </th>
            <th>
              Uncovered
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="negative"
          >
            <td
              className="selectable"
            >
              <a
                href="sourcefiles/src/a.js.html"
              >
                src/a.js
              </a>
            </td>
            <td>
               @
              flow
               
            </td>
            <td
              className=""
            >
              <span>
                50
                 %
              </span>
            </td>
            <td>
               
              2
               
            </td>
            <td>
               
              1
               
            </td>
            <td>
               
              1
               
            </td>
          </tr>
          <tr
            className="negative"
          >
            <td
              className="selectable"
            >
              <a
                href="sourcefiles/src/b.js.html"
              >
                src/b.js
              </a>
            </td>
            <td>
               @
              flow
               
            </td>
            <td
              className=""
            >
              <span>
                50
                 %
              </span>
            </td>
            <td>
               
              2
               
            </td>
            <td>
               
              1
               
            </td>
            <td>
               
              1
               
            </td>
          </tr>
          <tr
            className="negative"
          >
            <td
              className="selectable"
            >
              <a
                href="sourcefiles/src/d1/c.js.html"
              >
                src/d1/c.js
              </a>
            </td>
            <td>
               @
              flow
               
            </td>
            <td
              className=""
            >
              <span>
                50
                 %
              </span>
            </td>
            <td>
               
              2
               
            </td>
            <td>
               
              1
               
            </td>
            <td>
               
              1
               
            </td>
          </tr>
          <tr
            className="negative"
          >
            <td
              className="selectable"
            >
              <a
                href="sourcefiles/src/d1/d.js.html"
              >
                src/d1/d.js
              </a>
            </td>
            <td>
               @
              flow
               
            </td>
            <td
              className=""
            >
              <span>
                50
                 %
              </span>
            </td>
            <td>
               
              2
               
            </td>
            <td>
               
              1
               
            </td>
            <td>
               
              1
               
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="row centered"
    >
      <footer>
        Flow Coverage Report generated by
        <a
          href="https://flowtype.org"
        >
           flow 
        </a>
        and
        <a
          href="https://github.com/rpl/flow-coverage-report"
        >
           flow-coverage-report 
        </a>
        at 
      </footer>
    </div>
  </div>
</body>
`;
